--- a/prediction-api/Dockerfile
+++ b/prediction-api/Dockerfile
@@ -2,10 +2,10 @@
 FROM python:3.10.7-slim
 # Defining working directory and copy the requirements file. We will run the commands inside this new directory
 WORKDIR /usr/src/myapp
-# Copy requirements.txt  to the working directory
-COPY requirements.txt .
+# Copy api_requirements.txt  to the working directory
+COPY api_requirements.txt .
 # Install required python packages
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r api_requirements.txt
 # Copy all files in prediction-api local host directory to /usr/src/myapp in Docker container
 COPY . .
 # Expose the port that our app runs in
@@ -13,8 +13,8 @@ EXPOSE 5000
 # Enviroment Variables
 ENV MODEL_REPO=/usr/src/myapp
 # Run our App
-CMD ["python3","app.py"]
+CMD ["python3","api_app.py"]
 # We can also use an ENTRYPOINT and a CMD
 # Run our App
 #ENTRYPOINT ["python3"]
-#CMD ["app.py"]
+#CMD ["api_app.py"]
