--- a/prediction-api/Dockerfile
+++ b/prediction-api/Dockerfile
@@ -3,9 +3,9 @@ FROM python:3.10.7-slim
 # Defining working directory and copy the requirements file. We will run the commands inside this new directory
 WORKDIR /usr/src/myapp
 # Copy api_requirements.txt  to the working directory
-COPY api_requirements.txt .
+COPY requirements.txt .
 # Install required python packages
-RUN pip install --no-cache-dir -r api_requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 # Copy all files in prediction-api local host directory to /usr/src/myapp in Docker container
 COPY . .
 # Expose the port that our app runs in
