--- a/data_storing/requirements.txt
+++ b/data_storing/requirements.txt
@@ -1,5 +1,8 @@
-flask==2.0.1
-pandas==1.0.5
-requests==2.26.0
-scikit-learn==0.24.2
-sqlalchemy==1.3.18
+flask
+pandas
+keras
+tensorflow
+numpy
+h5py
+six
+sklearn
