--- a/app_builder.json
+++ b/app_builder.json
@@ -23,8 +23,8 @@
       "args": [
         "build",
         "-t",
-        "gcr.io/$PROJECT_ID/pipeline-executor:0.0.1",
-        "./pipeline-executor"
+        "gcr.io/$PROJECT_ID/model-training:0.0.1",
+        "./model_training"
       ]
     },
     {
@@ -45,7 +45,7 @@
       "name": "gcr.io/cloud-builders/docker",
       "args": [
         "push",
-        "gcr.io/$PROJECT_ID/pipeline-executor:0.0.1"
+        "gcr.io/$PROJECT_ID/model-training:0.0.1"
       ]
     }
   ]
