--- a/prediction-ui/Dockerfile
+++ b/prediction-ui/Dockerfile
@@ -10,6 +10,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 # Expose the port that our app runs in
 EXPOSE 5000
+EXPOSE 8080
 # Enviroment Variables
 ENV PREDICTOR_API=http://predictor-api-server:5000/houseprice_predictor
 #Add some meta data if necessary
