--- a/training_ui/Dockerfile
+++ b/training_ui/Dockerfile
@@ -18,6 +18,7 @@ EXPOSE 5000
 
 # Enviroment Variables
 ENV TRAINING_API=https://model-training-hwhqlhs2ua-uc.a.run.app
+ENV TRAINING_ENDPOINT=
 
 ENV PIPELINE_NAME=housing-price
 ENV PIPELINE_TEMPLATE=./house_pricing_training_pipeline.json
